# pei_server

./: .env  .gitignore  0000_csr-certbot.pem  0000_key-certbot.pem  Cargo.toml  Dockerfile  Migrant.toml  README.md  ReadmeKeycloak.md  ReadmeMigration.md  docker-compose.yml  docker-compose_with_keycloak.yml  icc_ban_dev_key.pem  icc_ban_prod_cert.pem  icc_ban_prod_key.pem  icc_server.pem  model.json
annuaire/: .env  Cargo.toml  Dockerfile  MigrationSetup.md  model.json
annuaire/migrations/2024-09-08-185508_eglises/: down.sql
annuaire/src/: addresses.rs  main.rs  schema.rs  server.rs
annuaire/src/database/: eglises.rs  get_infos_to_create_user.rs  mod.rs
annuaire/src/database/creates/: create_user.rs  mod.rs
annuaire/src/database/db/: mod.rs
annuaire/src/database/models/: adresse.rs  annuaire_search_result.rs  church.rs  email.rs  mod.rs  user_to_contact.rs
annuaire/src/database/queries/: mod.rs  query_church.rs  query_user.rs  query_user_by_email.rs  query_user_to_contact.rs  query_users.rs
annuaire/src/database/updates/: update_user.rs
annuaire/src/models/: adresses.rs  composants.rs  eglise_departements.rs  get_infos_to_create_user.rs  infos_qualifications.rs  langues.rs  parcours.rs  profiles.rs
annuaire/src/old/clients/: hyper_annuaire_client.rs
annuaire/src/old/database/mutations/: insert.rs
annuaire/src/old/database/queries/: search_stars.rs
annuaire/src/router/: hyper_router.rs  response.rs
annuaire/src/routes/: mod.rs
annuaire/src/routes/creates/: create_user.rs  mod.rs
annuaire/src/routes/queries/: mod.rs  query_city.rs  query_user.rs  query_user_by_email.rs  query_user_to_contact.rs  query_users.rs
annuaire/src/routes/updates/: update_user.rs
annuaire/src/services/annuaire/: create_campus.rs  create_competences.rs  create_ecole.rs  create_entreprise.rs  create_titre.rs  mod.rs  search_stars.rs
annuaire/src/services/database/: mod.rs
annuaire/src/services/database/context/: campus.rs  competences.rs  departements.rs  diplomes_certificats.rs  domaines.rs  ecoles.rs  entreprises.rs  langues.rs  localite.rs  mod.rs  specialites.rs  titres.rs  user_campus.rs  users.rs  (+12 more)
annuaire/surrealdb_scripts/: annuaire_1-2025-03-28.surql  annuaire_2-2025-03-28.surql  old_users.js  old_users_2.js
common_crates/: Cargo.toml  README.md
common_crates/src/: lib.rs
gateway/: Cargo.toml  Dockerfile  README.md
gateway/certificates/: cert.pem  key.pem
gateway/src/: addresses.rs  main.rs  read_file.rs
gateway/src/clients/: annuaire_client.rs  mjib_client.rs  mod.rs  user_client.rs
gateway/src/router/: hyper_router.rs  match_request.rs  mod.rs  responses.rs  source.rs  unknowned.rs
gateway/src/router/handlers/: mod.rs
icc_common/: Cargo.toml
icc_common/src/: lib.rs
icc_covoiturage/: Cargo.toml
icc_covoiturage/src/: main.rs
icc_covoiturage/src/services/: mod.rs
icc_covoiturage/src/services/covoiturage/: create_billet.rs  list_billets.rs  mod.rs
icc_covoiturage/src/services/database/: mod.rs
mjib/: Cargo.toml  Dockerfile  Dockerfile copy  Dockerfile_3  diesel.toml  diesel_readme.md  readme.md
mjib/.cargo/: config.toml
mjib/docs/: backlog_plateforme_jeunesbatisseurs.xlsx
mjib/migrations/2025-10-03-053003_mjib_init/: up.sql
mjib/migrations/2025-11-09-055005_discipline/: down.sql  up.sql
mjib/migrations/2025-11-09-210618_course/: up.sql
mjib/migrations/2025-11-09-220743_course_discipline/: down.sql  up.sql
mjib/migrations/2025-11-21-063418_age/: down.sql  up.sql
mjib/migrations/2025-11-25-185603_user/: up.sql
mjib/migrations/2025-11-26-125922_upgrade_age/: down.sql  up.sql
mjib/migrations/2025-12-11-043149_update_user/: down.sql  up.sql
mjib/migrations/2026-01-31-154520_academic_year/: down.sql  up.sql
mjib/migrations/2026-03-24-123747_cours_videos/: down.sql  up.sql
mjib/src/: addresses.rs  lib.rs  main.rs  schema.rs
mjib/src/auth_client/: mod.rs
mjib/src/database/: mod.rs
mjib/src/database/creates/: create_branche.rs  create_country.rs  create_role.rs  mod.rs  signup.rs
mjib/src/database/models/: church.rs  city.rs  cours.rs  mod.rs  user.rs  user_branches.rs
mjib/src/database/queries/: mod.rs  query_branches.rs  query_branches_by_user.rs  query_church.rs  query_discipline.rs  query_role.rs  signin.rs
mjib/src/models/: academic_year.rs  age.rs  course.rs  course_discipline.rs  discipline.rs  mod.rs  section.rs  session.rs  user.rs  users_sections.rs
mjib/src/router/: hyper_router.rs  response.rs
mjib/src/routes/: mod.rs
mjib/src/routes/creates/: create_annee_academique.rs  create_branche.rs  create_church.rs  create_city.rs  create_country.rs  mod.rs
mjib/src/routes/mutations/: mod.rs
mjib/src/routes/queries/: mod.rs  query_annee_academique.rs  query_branches.rs  query_branches_by_user_id.rs  query_church.rs  query_discipline.rs  query_user.rs  signin_user.rs
mjib/surrealdb_scripts/new_tables/: city.surql  potentialsstudents.surql  tables.sql  text.txt
mjib/surrealdb_scripts/tables/: annee_academique.surql  branche.surql  cours.surql  role.surql  signup_login.surql  user_branches.surql
old_to_remove/: Cargo.toml  DockerReadme.md  docker-compose-prod.yml
old_to_remove/annuaire/: Cargo.toml
old_to_remove/annuaire/src/: main.rs
old_to_remove/annuaire/src/services/: mod.rs
old_to_remove/common/: Cargo.toml
old_to_remove/data/: campus.sql  departement.sql  langues.sql  user_campus.sql  user_domaine.sql
old_to_remove/gateway/src/: main.rs
old_to_remove/gateway/src/clients/: annuaire_client.rs
old_to_remove/gateway/src/router/: mod.rs
old_to_remove/inter_services_messages/: Cargo.toml
old_to_remove/inter_services_messages/src/annuaire/: model.rs
old_to_remove/migrations/icc_usrs_annuaire_migrations/: ReadmeMigration.md
postal_codes/: Cargo.toml  Dockerfile  be_postal_codes.sql  diesel.toml
postal_codes/migrations/2025-12-16-061738_initial/: up.sql
postal_codes/src/: lib.rs  main.rs  schema.rs
postal_codes/src/database/: mod.rs
postal_codes/src/models/: mod.rs  postal_codes.rs
postal_codes/src/routes/: mod.rs
postal_codes/src/routes/queries/: mod.rs
(+208 files in other folders)
