[package]
name = "common_crates"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.26", features = ["macros", "rt-multi-thread", "rt", "net"]}
tracing = "0.1.26"
tracing-subscriber = "0.3.1"
#remoc = { version = "0.13", features = ["rch"] }
#acteur = "0.12"
#rayon = "1.8"
#sqlx = { version = "0.7", features = ["postgres", "runtime-async-std-rustls", "time"]}
async-trait = "0.1"
#warp = "0.3"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_derive = "1.0"
hyper = {version = "1.4", features = ["server", "client", "http1", "http2"]}
#match_request = "0.1"
futures = "0.3"
#multipart = "0.18"
http-body-util = "0.1"
lazy_static = "1.5"
regex = "1.10"
hyper-util = { version = "0.1", features = ["server-auto", "tokio"]}
chrono = "0.4"
tls-listener = {version = "0.10", features = ["rustls-core"]}
tokio-rustls = {version = "0.26"}
rustls-pemfile = "2.2"
rustls = "0.23"