[package]
name = "icc_covoiturage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
icc_common = { version = "0.1", path = "../icc_common" }
inter_services_messages = { version = "0.1", path = "../inter_services_messages" }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"