[package]
name = "mjib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common_crates = { git = "https://github.com/IccDev/common_crates.git", branch = "develop" }

[profile.release]
lto = true
strip = true
opt-level = 3
panic = 'abort'
codegen-units = 1