[package]
name = "pei_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "gateway"
path = "gateway/src/main.rs"

[[bin]]
name = "annuaire"
path = "annuaire/src/main.rs"


[workspace]
members = [
    "gateway",
    "annuaire",
    "common",
    "inter_services_messages"
]