[package]
name = "postal_codes"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {version = "1", features = ["full"]}
warp = {version = "0.4", features = ["server"] }
pretty_env_logger = "0.5"
dotenv = "0.15"
diesel = { version = "2.2", features = ["postgres", "uuid", "serde_json", "chrono", "postgres_backend"] }
chrono = {version = "0.4.41", features = ["serde"]}
serde = { version = "1.0.0", features = ["derive"] }
serde_json = "1.0"
ureq = {version = "3.1", features = ["json"]}
diesel_full_text_search = "2.3.0"